- Changed the respawn time of Fel Reaver Power Core.
- Changed the respawn time of Fel Reaver Armor Plating.

[2022-04-28]
- Changed the respawn time of Pneumatic Tank Transjigamarig.
- Added Super Strong Metal Plate to the loot table of Kvaldir Mist Lord for the quest Super Strong Metal Plates!
- Changed the flags of Strong Metal Plate to allow every member of a group to loot it.

[2022-04-29]
- Added Fizzcrank Spare Parts to the loot table of Scavenge-bot 004-A8 for the quests What's the Matter with the Transmatter? and Cleaning Up the Pools.
- Added Fizzcrank Spare Parts to the loot table of Sentry-bot 57-K for the quests What's the Matter with the Transmatter? and Cleaning Up the Pools.
- Added Fizzcrank Spare Parts to the loot table of Defendo-tank 66D for the quests What's the Matter with the Transmatter? and Cleaning Up the Pools.
- Added Fizzcrank Spare Parts to the loot table of Fizzcrank Mechagnome for the quests What's the Matter with the Transmatter? and Cleaning Up the Pools.
- Changed the respawn time of Burblegobble's Bauble.
- Changed the respawn time of Gurgleboggle's Bauble.
- Added Winterfin Clam to the loot table of Winterfin Shorestriker for the quest Winterfin Commerce.
- Added Winterfin Clam to the loot table of Winterfin Oracle for the quest Winterfin Commerce.
- Added Winterfin Clam to the loot table of Winterfin Warrior for the quest Winterfin Commerce.

[2022-04-30]
- Added the script for world gameobjects to make the quest Oh Noes, the Tadpoles! trigger for every member of a group.
- Added the script for Borean Tundra to make the quest Escape from the Winterfin Caverns trigger for every member of a group.

[2022-05-01]
- Added the script for Borean Tundra to make the quest Abduction trigger for every member of a group.
- Added Crystallized Mana Shard to the loot table of Coldarra Mage Slayer for the quest Bait and Switch.
- Changed the flags of Crystallized Mana Shard to allow every member of a group to loot it.